Avoid invisible text on load

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -4,6 +4,7 @@
     url("/fonts/opensaucesans-light-webfont.woff") format("woff");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Open Sauce Sans";
@@ -11,6 +12,7 @@
     url("/fonts/opensaucesans-lightitalic-webfont.woff") format("woff");
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -19,6 +21,7 @@
     url("/fonts/opensaucesans-regular-webfont.woff") format("woff");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Open Sauce Sans";
@@ -26,6 +29,7 @@
     url("/fonts/opensaucesans-italic-webfont.woff") format("woff");
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -34,13 +38,16 @@
     url("/fonts/opensaucesans-medium-webfont.woff") format("woff");
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
   font-family: "Open Sauce Sans";
   src: url("/fonts/opensaucesans-mediumitalic-webfont.woff2") format("woff2"),
     url("/fonts/opensaucesans-mediumitalic-webfont.woff") format("woff");
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -49,6 +56,7 @@
     url("/fonts/opensaucesans-semibold-webfont.woff") format("woff");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Open Sauce Sans";
@@ -56,6 +64,7 @@
     url("/fonts/opensaucesans-semibolditalic-webfont.woff") format("woff");
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -64,6 +73,7 @@
     url("/fonts/opensaucesans-bold-webfont.woff") format("woff");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Open Sauce Sans";
@@ -71,6 +81,7 @@
     url("/fonts/opensaucesans-bolditalic-webfont.woff") format("woff");
   font-weight: 700;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -79,6 +90,7 @@
     url("/fonts/opensaucesans-black-webfont.woff") format("woff");
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Open Sauce Sans";
@@ -86,4 +98,5 @@
     url("/fonts/opensaucesans-blackitalic-webfont.woff") format("woff");
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
